--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -730,7 +730,7 @@ The automatic rescaling behavior of this approach depending on image size and as
 For every image~-- or more general for every ``object'' like  images, spaces or newlines~-- several properties like width, height, aspect ratio and others have to be saved. In any object oriented programming language this would probably be solved by writing a class, which can store the various properties in fields, and creating instances for any of the considered objects.
 
 \begin{figure}
-\begin{subfiglist}{{1\\2\\3}4}
+\begin{subfiglist}[cs=0pt,ew=200pt,cfw=10pt]{{1\\2\\3}4}
   \subfiglistfile[fc=red]{1}{figures/02.png}
   \subfiglistfile[fc=red]{2}{figures/02.png}
   \subfiglistfile[fc=red]{3}{figures/02.png}
