--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -739,4 +739,14 @@ For every image~-- or more general for every ``object'' like  images, spaces or 
 \caption{asfd}
 \end{figure}
 
+\begin{figure}
+\begin{subfiglist}[cs=0pt,euh=true,ew=200pt]{12\\@{a}\\34}
+  \subfiglistfile[fc=red,fw=10pt]{1}{figures/02.png}
+  \subfiglistfile[fc=red,fw=20pt]{2}{figures/02.png}
+  \subfiglistfile{3}{figures/02.png}
+  \subfiglistfile{4}{figures/02.png}
+\end{subfiglist}
+\caption{asfd}
+\end{figure}
+
 \end{document}
