--- a/TODO
+++ b/TODO
@@ -13,6 +13,8 @@ TODO
 * Fix width and height argument for subfiglistoverlay environment
 * Add Tikz positioning for labels
 * Allow adjusting \fboxsep for color background in labels
+* Check for finiteness of all fp in \dim_ratio:nn calculations, raise errors if not
+* Add option to disable warnings for wrong order.
 
 
 
