--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -740,7 +740,7 @@ For every image~-- or more general for every ``object'' like  images, spaces or 
 \end{figure}
 
 \begin{figure}
-\begin{subfiglist}[cs=0pt,euh=true,ew=200pt]{12\\34}%{12\\@{a}\\34}
+\begin{subfiglist}[cs=0pt,uh=true,ew=200pt]{12\\@{a}\\34}
   \subfiglistfile[fc=red,fw=10pt]{2}{figures/02.png}
   \subfiglistfile[fc=red,fw=20pt]{1}{figures/02.png}
   \subfiglistfile{3}{figures/02.png}
