Use _l_ and _g_ type variables throughout the package.

--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@ MANUAL
 * \textwidth may change throughout the document
 * \refstepcounter{figure} if not tweaking caption package and not using figure environment.
 * No space allowed when writing integers in braces
+* Global variables: Nesting is not supported.
 
 
 
