--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -247,7 +247,7 @@ The more complicated example in \cref{lst:complicated} illustrates the usage of 
 \begin{Verbatim}[numbers=left]
 \begin{subfiglist}
   {
-    1 @{\color{red}\rule{2ex}{2ex}} 2 3 \\ 
+    1 @{\color{red}\rule{2ex}{\subfiglistlineheight}} 2 3 \\ 
     { 4 \\ 5 6 } 7 { 8 9 \\ {10} } \\[3ex]
     {11} {12} @{\hspace*{3ex}} {13} {14}
   }
@@ -273,7 +273,7 @@ The more complicated example in \cref{lst:complicated} illustrates the usage of 
 \begin{minipage}{0.5\textwidth}
 \begin{subfiglist}
   {
-    1 @{\color{red}\rule{2ex}{2ex}} 2 3 \\ 
+    1 @{\color{red}\rule{2ex}{\subfiglistlineheight}} 2 3 \\ 
     { 4 \\ 5 6 } 7 { 8 9 \\ {10} } \\[3ex]
     {11} {12} @{\hspace*{3ex}} {13} {14}
   }
@@ -740,7 +740,7 @@ For every image~-- or more general for every ``object'' like  images, spaces or 
 \end{figure}
 
 \begin{figure}
-\begin{subfiglist}[cs=0pt,uh=true,ew=200pt]{12\\@{a}\\34}
+\begin{subfiglist}[cs=0pt,uh=true,ew=200pt]{12\\34}%{12\\@{a}\\34}
   \subfiglistfile[fc=red,fw=10pt]{2}{figures/02.png}
   \subfiglistfile[fc=red,fw=20pt]{1}{figures/02.png}
   \subfiglistfile{3}{figures/02.png}
